# MissionControl

./: .env.example  .gitignore  Certificate-Requesting.md  DEPLOY.md  README.md  docker-compose.yml  step-ca.md
.github/workflows/: ci.yml  code-review.yml  deploy.yml
backend/: Cargo.toml  Dockerfile  entrypoint.sh  sidecar.sh
backend/src/: config.rs  errors.rs  keycloak.rs  main.rs  weather_poller.rs
backend/src/db/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  ca.rs  ca_sign.rs  cti.rs  dashboard.rs  feeds.rs  health.rs  mod.rs  tasks.rs  users.rs  weather.rs
backend/src/middleware/: admin.rs  auth.rs
backend/src/models/: artifacts.rs  certificate.rs  cti.rs  feed.rs  mod.rs  task.rs  user.rs  weather.rs
backend/src/nws_client/: mod.rs
backend/src/routes/: mod.rs
deploy/: nginx.conf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: CtiPage.test.tsx  TasksPage.test.tsx  WeatherPage.test.tsx
frontend/src/components/: AdminRoute.tsx  Layout.tsx  Navbar.tsx  PrivateRoute.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: AdminPage.tsx  CaDashboardPage.tsx  CountdownPage.tsx  CtiPage.tsx  DashboardPage.tsx  FeedsPage.tsx  LoginPage.tsx  RegisterPage.tsx  TaskDetailPage.tsx  TasksPage.tsx  WeatherPage.tsx
frontend/src/services/: api.ts
scripts/: make-admin.sh
